welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: Unit does not take parameters
	    growFlowers();
                       ^FlowerPot:2: error: not found: value color
  faireFleur(color.RED);avance(3);faireFleur(color.CYAN);
             ^FlowerPot:2: error: not found: value color
  faireFleur(color.RED);avance(3);faireFleur(color.CYAN);
                                             ^FlowerPot:10: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (k: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
    colorie;avance;
            ^FlowerPot:12: error: ambiguous reference to overloaded definition,
both method recule in class FlowerPot of type (k: Int)Unit
and  method recule in class SimpleBuggle of type ()Unit
match expected type ?
  recule;gauche;avance;colorie;recule;recule;colorie
  ^FlowerPot:12: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (k: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
  recule;gauche;avance;colorie;recule;recule;colorie
                ^FlowerPot:12: error: ambiguous reference to overloaded definition,
both method recule in class FlowerPot of type (k: Int)Unit
and  method recule in class SimpleBuggle of type ()Unit
match expected type ?
  recule;gauche;avance;colorie;recule;recule;colorie
                               ^FlowerPot:12: error: ambiguous reference to overloaded definition,
both method recule in class FlowerPot of type (k: Int)Unit
and  method recule in class SimpleBuggle of type ()Unit
match expected type ?
  recule;gauche;avance;colorie;recule;recule;colorie
                                      ^FlowerPot:13: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (k: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
  avance;setCouleurBrosse(color.YELLOW);droite
  ^FlowerPot:13: error: not found: value color
  avance;setCouleurBrosse(color.YELLOW);droite
                          ^FlowerPot:22: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (k: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
    avance
    ^FlowerPot:28: error: ambiguous reference to overloaded definition,
both method recule in class FlowerPot of type (k: Int)Unit
and  method recule in class SimpleBuggle of type ()Unit
match expected type ?
    recule;
    ^FlowerPot:34: error: ambiguous reference to overloaded definition,
both method recule in class FlowerPot of type (k: Int)Unit
and  method recule in class SimpleBuggle of type ()Unit
match expected type ?
    recule
    ^FlowerPot:38: error: ambiguous reference to overloaded definition,
both method avance in class FlowerPot of type (k: Int)Unit
and  method avance in class SimpleBuggle of type ()Unit
match expected type ?
    avance;
    ^